# censusgeocode

./: .gitignore  .travis.yml  HISTORY  HISTORY.rst  Makefile  README.md  censusgeocode.py  pyproject.toml  readme.md  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml  python.yml  test.yml
censusgeocode/: __init__.py  __main__.py  censusgeocode.py  cli.py
src/censusgeocode/: __init__.py  __main__.py  censusgeocode.py
src2/censusgeocode/: __init__.py  censusgeocode.py  cli.py
src3/censusgeocode/: __init__.py  censusgeocode.py  cli.py
tests/: __init__.py  test_censusgeocode.py
tests/fixtures/: address-batch.yaml  address-geographies.yaml  address-locations.yaml  batch.csv  coordinates.yaml  onelineaddress.yaml  test_benchmark_vintage.yaml
