# This file is part of censusgeocode.
# https://github.com/fitnr/censusgeocode
[build-system]
requires = ["setuptools>=60.5.0", "wheel"]
build-backend = 'setuptools.build_meta'

[tool]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 80