[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "censusgeocode"
dynamic = ["version"]
description = "Thin Python wrapper for the US Census Geocoder"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Neil Freeman", email = "contact@fakeisthenewreal.org"}
]
keywords = ["census", "geocode", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8,<4"
dependencies = [
    "requests[security]>=2.27",
    "requests-toolbelt>=0.9",
]

[project.urls]
Homepage = "https://github.com/fitnr/censusgeocode"
"Bug Tracker" = "https://github.com/fitnr/censusgeocode/issues"
Repository = "https://github.com/fitnr/censusgeocode.git"
Changelog = "https://github.com/fitnr/censusgeocode/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = [
    "vcrpy>=4.2; python_version < '3.9'",
    "vcrpy>=7.0; python_version >= '3.9'",
    "urllib3>=2.0; python_version >= '3.9'",
]

[project.scripts]
censusgeocode = "censusgeocode.__main__:main"

[tool]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "censusgeocode.__version__"}

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 80
