# -*- coding: utf-8 -*-
[metadata]
license_files = LICENSE.txt
name = censusgeocode
version = attr: censusgeocode.__version__
description = Thin Python wrapper for the US Census Geocoder
long_description = file: README.md
long_description_content_type = text/markdown
keywords= census, geocode, api
author = Neil Freeman
author_email = contact@fakeisthenewreal.org
url = https://github.com/fitnr/censusgeocode
license = GNU General Public License v3 (GPLv3)
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
install_requires = 
	requests[security]>=2.27.0,<3
    requests-toolbelt>=0.9.0,<1
python_requires = >= 3.6, <4

[options.extras_require]
tests = vcrpy>=4.1.1,<5

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
   censusgeocode = censusgeocode.__main__:main
